# hydra

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
hydra/: CMakeLists.txt  hydra.cpp  hydra.hpp  hydra_debug.hpp  hydra_exception.hpp  hydra_glfw_ext.hpp  hydra_glm.hpp  hydra_glm_udl.hpp  hydra_imgui_ext.hpp  hydra_lodepng_ext.hpp  hydra_logger.hpp  hydra_logo.hpp  hydra_reflective.hpp  hydra_types.hpp  shader_structs.cpp
hydra/assets/: image.hpp  raw.hpp  serialized.hpp  spirv.hpp  static_mesh.hpp
hydra/ecs/: conf.hpp  ecs.hpp  hierarchy.cpp  hierarchy.hpp  renderable.hpp  transform.cpp  transform.hpp  types.hpp  universe.cpp  universe.hpp
hydra/engine/: core_context.cpp  core_context.hpp  engine.cpp  engine.hpp  engine_module.cpp  engine_module.hpp  hydra_context.hpp  vk_context.hpp
hydra/engine/conf/: conf.hpp  context.cpp  context.hpp
hydra/engine/core_modules/: core_module.cpp  core_module.hpp  io_module.cpp
hydra/ext/lodePNG/: lodePNG.hpp
hydra/geometry/: geometry.hpp  mesh.hpp
hydra/glfw/: glfw.hpp  glfw_engine_module.cpp  glfw_engine_module.hpp  glfw_events.cpp  glfw_events.hpp  glfw_extension.hpp  glfw_feature_requester.hpp  glfw_window.cpp  glfw_window.hpp
hydra/glfw/ecs/: glfw_epilogue.hpp  glfw_prologue.hpp
hydra/glfw/events/: event.hpp  event_listener.hpp
hydra/imgui/: generic_ui.cpp  generic_ui.hpp  imgui.hpp  imgui_context.cpp  imgui_context.hpp  imgui_drawdata.hpp  imgui_engine_module.cpp  imgui_engine_module.hpp  imgui_even_listener.hpp  imgui_renderpass.hpp  imgui_setup_pass.hpp  shader_structs.hpp  ui_elements.cpp  ui_elements.hpp
hydra/imgui/generic_ui_elements/: generic_ui_elements.cpp
hydra/imgui/utilities/: imgui_folder_view.hpp  imgui_log_window.hpp
hydra/init/: bootstrap.hpp  device.hpp  extension.hpp  feature_requester_interface.hpp  hydra_device_creator.hpp  hydra_init_interface.hpp  hydra_instance_creator.hpp  hydra_vulkan_instance.hpp  instance_layer.hpp
hydra/init/feature_requesters/: gen_feature_requester.hpp
hydra/material/: material.hpp
hydra/renderer/: offscreen_context.hpp  pass_manager.cpp  pass_manager.hpp  render_pass.hpp  render_pass_context.hpp  renderer.hpp  renderer_engine_module.cpp  renderer_engine_module.hpp  shader_structs.hpp
hydra/renderer/ecs/: ecs.hpp  gpu_task_producer.cpp  gpu_task_producer.hpp  gpu_tasks_order.cpp  gpu_tasks_order.hpp
hydra/renderer/generic_shaders/: blur.cpp  blur.hpp  downsample.cpp  downsample.hpp  shader_structs.hpp
hydra/renderer/gui/: font_face.hpp  font_manager.hpp  gui.hpp  gui_manager.hpp  gui_system.hpp  raw_font_face.hpp  renderable.hpp  text.hpp
hydra/renderer/resources/: mesh_manager.cpp  mesh_manager.hpp  mesh_manager_shader_structs.hpp  resource_array.hpp  resource_array.tpl.hpp  texture_manager.cpp  texture_manager.hpp  texture_manager_222.cpp2  texture_manager_222.hpp2  texture_manager_shader_structs.hpp
hydra/resources/: asset.hpp  compressor.cpp  compressor.hpp  concepts.hpp  context.cpp  context.hpp  enums.hpp  file_map.hpp  index.cpp  index.hpp  metadata.cpp  metadata.hpp  module.cpp  module.hpp  packer.cpp  packer.hpp  processor.cpp  processor.hpp  rel_db.cpp  rel_db.hpp  resources.hpp  utility.hpp
hydra/resources/mimetype/: mimetype.cpp  mimetype.hpp
hydra/resources/network/: connection.hpp  protocol.hpp  server.hpp
hydra/resources/proxy/: io_proxy.hpp
hydra/threading/: task.hpp  task_control.hpp  task_scheduler.hpp  threading.hpp  types.hpp
hydra/utilities/: auto_buffer.hpp  command_pool_manager.cpp  command_pool_manager.hpp  deferred_fence_execution.cpp  deferred_fence_execution.hpp  deferred_queue_execution.cpp  deferred_queue_execution.hpp  descriptor_allocator.cpp  descriptor_allocator.hpp  holders.hpp  image_loader.hpp  layout.hpp  memory_allocation.hpp  memory_allocator.hpp  memory_allocator_chunk.hpp  memory_allocator_chunk_chain.hpp  pipeline_manager.cpp  pipeline_manager.hpp  pipeline_render_state.cpp  pipeline_render_state.hpp  refcount_pooled_res_ptr.hpp  shader_manager.hpp  transfer.cpp  transfer.hpp  transfer_context.cpp  transfer_context.hpp  utilities.hpp  vk_resource_destructor.hpp
hydra/utilities/allocator/: allocator.hpp  allocator_scope.cpp  allocator_scope.hpp  allocator_set.cpp  allocator_set.hpp  block_allocator.cpp  block_allocator.hpp  scoped_pool.cpp  scoped_pool.hpp  transient_pool.cpp  transient_pool.hpp
hydra/utilities/shader_gen/: block.cpp  block.hpp  descriptor_sets.hpp  descriptor_sets_generator.cpp  descriptor_sets_runtime.cpp  descriptor_sets_types.hpp  types.hpp
hydra/vulkan/: attachment.hpp  attachment_color_blending.hpp  buffer.hpp  buffer_image_copy.hpp  clear_value.hpp  command_buffer.hpp  command_buffer_recorder.hpp  command_pool.hpp  debug_marker.hpp  descriptor_pool.hpp  descriptor_set.hpp  descriptor_set_layout.hpp  descriptor_set_layout_binding.hpp  device.hpp  device_features.hpp  device_memory.hpp  event.hpp  extension.hpp  fence.hpp  framebuffer.hpp  image.cpp  image.hpp  image_blit_area.hpp  image_copy_area.hpp  image_creator_interface.hpp  image_subresource.hpp  image_subresource_layers.hpp  image_subresource_range.hpp  image_view.hpp  instance.cpp  instance.hpp  layer.hpp  memory_barrier.hpp  physical_device.hpp  pipeline.hpp  pipeline_cache.hpp  pipeline_cache_data.hpp  pipeline_color_blending.hpp  pipeline_dynamic_state.hpp  pipeline_input_assembly_state.hpp  (+27 more)
hydra/vulkan/image_creators/: image_2d.hpp  image_concurrent.hpp  image_sparse.hpp
samples/basic/: CMakeLists.txt  app.hpp  fs_quad_pass.hpp  imgui_log_window.hpp  main.cpp  mesh-render-pass.hpp  sample.hpp  shader_struct.cpp  shader_struct.hpp
tools/hydra_packers/: CMakeLists.txt  hsf_processor.cpp  image_packer.cpp  image_packer.hpp  obj_processor.cpp  png_processor.cpp  process_helpers.cpp  process_helpers.hpp  raw_packer.cpp  spirv_packer.cpp  spirv_packer.hpp  spirv_packer_big_dump_table.cpp  static_mesh_packer.cpp  static_mesh_packer.hpp  string_utilities.hpp  xz_processor.cpp
tools/resource_server/: CMakeLists.txt  fs_watcher.hpp  main.cpp  options.hpp  packer_engine_module.hpp  packer_ui.hpp
(+35 files in other folders)
